sort.basic.cocktail.AlgCocktailSort1.scala.error
Compilation error:
AlgCocktailSort1:12: error: '<-' expected but ')' found.
      for (i >- 0 to x-2){
                        ^AlgCocktailSort1:25: error: illegal start of simple expression
  }
  ^