sort.basic.cocktail.AlgCocktailSort1.scala.code
def cocktailSort() {
  
  x=getValueCount()
  
  var continue = true
  
  while(continue==true){
    
    continue = false;
  
      for (i >- 0 to x-2){

        if(isSmaller(i+1,i)){swap(i,i+1);continue=true;}
        
  }
      
      i=x-2

  		while (i>0){

        if(isSmaller(i+1,i)){swap(i,i+1);continue=true;}
        i=i-1
      }
  }
}